z-index fix

--- a/style2.css
+++ b/style2.css
@@ -74,6 +74,7 @@ div#inputs
 	overflow: auto;
 	background-color: rgba(255,255,255,0.3);
 	text-align: center;
+	z-index: 10;
 }
 
 div#inputs form
